[package]
name = "tcp-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.44.1", features = [ "io-util", "net", "rt-multi-thread", "macros", "sync" ] }
config = "0.15.11"
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.21.1"